# grpc-libreoffice

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.gradle.kts  settings.gradle.kts
.github/workflows/: publish.yml
gradle/: libs.versions.toml
grlibre-api/: build.gradle.kts
grlibre-api/src/main/proto/ai/pipestream/office/v1/: office_service.proto
grlibre-service/: build.gradle.kts
grlibre-service/src/main/java/ai/pipestream/grlibre/convert/: ConversionEngine.java  ConversionFailedException.java  LibreOfficeEngine.java  UnknownFormatException.java
grlibre-service/src/main/java/ai/pipestream/grlibre/server/: GrLibreServer.java  OfficeConvertServiceImpl.java
grlibre-service/src/main/resources/: log4j2.xml
grlibre-service/src/test/java/ai/pipestream/grlibre/: ConvertServiceTest.java  LibreOfficeIntegrationTest.java
proto/: buf.yaml
proto/ai/pipestream/document/v1/: document.proto
proto/ai/pipestream/office/v1/: office_service.proto
src/: docling_map.cpp  docling_map.h  event_frame.cpp  event_frame.h  lok_engine.cpp  lok_engine.h  main.cpp  png_encode.cpp  png_encode.h  render_service.cpp  render_service.h  uno_extract.cpp  uno_extract.h  worker_main.cpp  worker_runner.cpp  worker_runner.h
tests/: docling_map_test.cpp  event_frame_test.cpp  png_encode_test.cpp  render_service_test.cpp  worker_render_test.cpp
